# theonecrawl

./: .gitignore  CLAUDE.md  docker-compose.test.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: deploy-api.yml  deploy-web.yml  load-test.yml  security-audit.yml  security-scan.yml  test-integration.yml  test.yml
.semgrep/: cosmos-routing.yml  hardcoded-secrets.yml  multi-tenant-bypass.yml  rbac-missing.yml
api/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
api/src/: index.ts
api/src/auth/: abuse-detection.ts  api-keys.ts  internal-middleware.ts  middleware.ts  passwords.ts  rate-limiter.ts  sessions.ts
api/src/billing/: credits.ts
api/src/data/: vendor-templates.ts
api/src/engine/: actions.ts  cms-types.ts  converter.ts  crawler.ts  extractor.ts  markdown-converter.ts  media-processor.ts  monitor-scheduler.ts  pdf-parser.ts  (+3 more)
docs/: INTEGRATION.md
marketing/: worker.js  wrangler.toml
scripts/: seed-admin.ts  setup-cloudflare.sh  setup-monitoring.sh  setup-redis.sh
sdks/cli/: package.json  tsup.config.ts
sdks/js/: package.json  tsconfig.json  tsup.config.ts
sdks/mcp/: package.json
sdks/python/: pyproject.toml
sdks/python/theonecrawl/: __init__.py  async_client.py  client.py  errors.py  types.py
tests/load/: crawl-burst.js  mixed-workload.js  rate-limit-test.js  scrape-steady.js
web/: index.html  package.json  staticwebapp.config.json  tailwind.config.ts  tsconfig.json  vite.config.ts
web/public/: site.webmanifest  staticwebapp.config.json
web/src/: App.tsx  index.css  main.tsx
(+125 files in other folders)
