[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "theonecrawl"
version = "0.1.0"
description = "Official Python SDK for TheOneCrawl — Firecrawl-compatible web crawling API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "TheOneCrawl", email = "hello@theonecrawl.app" }]
keywords = ["web-crawling", "scraping", "firecrawl", "cms", "markdown"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://theonecrawl.app"
Documentation = "https://theonecrawl.app/docs"
Repository = "https://github.com/jpthegeek/theonecrawl"
